--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Session Check and test
         run: |
+          rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
           cd session
           cargo fmt --all --check
           cargo clippy --all-targets -- -D warnings -A unused-imports
